add humburger icon to nav

--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Starhot</title>
+    <link rel="stylesheet" href="./public/stylesheets/reset.css">
     <link rel="stylesheet" href="./public/stylesheets/main.css">
   </head>
   <body>
-    <header class="header-container">
-
+    <!-- Header which contains navbar -->
+    <header>
+      <!-- Navbar div -->
+      <div class="nav row center">
+        <!-- left container -->
+        <div class="left-container center row">
+          <div class="hamburger-menu column">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </div>
+        </div>
+      </div>
     </header>
   </body>
 </html>
