add dropdown list

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             <span class="line"></span>
             <span class="line"></span>
             <span class="line"></span>
+            <div class="dropdown">
+              <ul>
+                <li>Channels</li>
+                <li>Languages</li>
+                <li>Genres</li>
+              </ul>
+            </div>
           </div>
           <!-- Disney+hotstar logo -->
           <div class="logo-container">
@@ -28,12 +35,58 @@
             <!-- links -->
             <a class="nav-links" href="">
               <div class="nav-link-text">TV</div>
+              <div class="dropdown">
+                <ul>
+                  <li>Hotstar Specials</li>
+                  <li>Quix</li>
+                  <li>Star Jalsha</li>
+                  <li>Star Plus</li>
+                  <li>Star Vijay</li>
+                  <li>Star Bharat</li>
+                  <li>Asianet</li>
+                  <li>Star Maa</li>
+                  <li>more...</li>
+                </ul>
+              </div>
             </a>
+            
             <a class="nav-links" href="">
               <div class="nav-link-text">Movies</div>
+              <div class="dropdown">
+                <ul>
+                  <li>Hindi</li>
+                  <li>Bengali</li>
+                  <li>Telugu</li>
+                  <li>Malayalam</li>
+                  <li>Tamil</li>
+                  <li>Marathi</li>
+                  <li>English</li>
+                  <li>Kannada</li>
+                </ul>
+              </div>
             </a>
             <a class="nav-links" href="">
               <div class="nav-link-text">Sports</div>
+              <div class="dropdown">
+                <ul>
+                  <li>Cricket</li>
+                  <li>Football</li>
+                  <li>Formula 1</li>
+                  <li>eSports</li>
+                  <li>Tennis</li>
+                  <li>Formula E</li>
+                  <li>Martial Arts</li>
+                  <li>Basketball</li>
+                  <li>Badminton</li>
+                  <li>Hockey</li>
+                  <li>Athletics</li>
+                  <li>Golf</li>
+                  <li>Wrestling</li>
+                  <li>Kabaddi</li>
+                  <li>Table Tennis</li>
+                  <li>Khelo India</li>
+                </ul>
+              </div>
             </a>
             <a class="nav-links" href="">
               <div class="nav-link-text">Premium</div>
