add carousel banner

--- a/index.html
+++ b/index.html
@@ -118,5 +118,23 @@
         </div>
       </div>
     </header>
+    <section class="carousel">
+      <div class="navigation">
+        <button class="left-arrow">&lt</button>
+        <button class="right-arrow">&gt</button>
+      </div>
+      <div class="card">
+        <div class="left-title">
+          <div class="title-card">
+            <h1>RadhaKrishn</h1>
+            <h2>Star Bharat · Hindi · Mythology</h2>
+            <p>Radha and Krishna are the epitome of eternal love and sacrifice, transcending eras and emotions. Here's a never seen before retelling of this supreme romance.</p>
+          </div>
+        </div>
+        <div class="right-image">
+          <div class="gradient"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
