add responsiveness to navbar and carousel banner

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
           </div>
         </div>
         <div class="right-image">
+          <img src="./public/assets/images/rk.jpg" alt="">
           <div class="gradient"></div>
         </div>
       </div>
