add horizontal show list with hover effect

--- a/index.html
+++ b/index.html
@@ -137,5 +137,111 @@
         </div>
       </div>
     </section>
+    <div class="show-tray-list">
+      <div class="header-wrapper">
+        <h1>Latest &amp; Trending</h1>
+      </div>
+      <div class="show-list">
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb01.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb02.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb03.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb01.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb02.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb03.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb01.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb02.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb03.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
