--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
           <div class="thumbnail">
             <img src="./public/assets/images/thumb02.webp" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>The Empire</h3>
+              <h4>Drama, Historical, Hotstar Special</h4>
+              <p>In the midst of scheming courtiers, ministers and a dead king, 14 year old...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
@@ -280,165 +280,40 @@
       </div>
       
     </div>
-    <div class="show-tray-list">
-      <div class="header-wrapper">
-        <h1>Popular</h1>
-      </div>
-      <div class="show-list">
-          <!-- <button class="scroll-btn-left">&lt;</button>
-          <button class="scroll-btn-right">&gt;</button> -->
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb01.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
+    <footer>
+      <div class="footer-container">
+        <div class="footer-left">
+          <ul>
+            <li><a href="">About Disney+ Hotstar</a></li>
+            <li><a href="">Terms of Use</a></li>
+            <li><a href="">Privacy Policy</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">Feedback</a></li>
+            <li><a href="">Careers</a></li>
+          </ul>
+          <p>
+            © 2021 STAR. All Rights Reserved. HBO, Home Box Office and all related channel and programming logos are service marks of, and all related programming visuals and elements are the property of, Home Box Office, Inc. All rights reserved.
+          </p>
+        </div>
+        <div class="footer-right">
+          <div class="app-unit">
+            <div class="store-wrapper">
+              <h5>Disney+ Hotstar App</h5>
+              <div>
+                <div class="logo-container"></div>
+                <div class="logo-container"></div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb02.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb03.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb01.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb02.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb03.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb01.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb02.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb03.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb01.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb02.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
-            </div>
-          </div>
-        </div>
-        <div class="thumbnail-container">
-          <div class="thumbnail">
-            <img src="./public/assets/images/thumb03.webp" alt="">
-            <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
-              <button class="btn">+  ADD TO WATCHLIST</button>
+          <div class="social-unit">
+            <h5>Connect with us</h5>
+            <div>
+              <div class="icon-container"></div>
+              <div class="icon-container"></div>
             </div>
           </div>
         </div>
       </div>
-      
-    </div>
-    <div class="show-tray-list">
-      <div class="header-wrapper">
-        <h1>Popular</h1>
-      </div>
-      <div class="show-list">
-      <div class="thumbnail-container">
-        <div class="thumbnail">
-          <img src="./public/assets/images/thumb01.webp" alt="">
-          <div class="details">
-            <h3>Cruella</h3>
-            <h4>Crime, Comedy, English</h4>
-            <p>The film is about rebellious early days of cinema's most notorious and...</p>
-            <button class="btn">+  ADD TO WATCHLIST</button>
-          </div>
-        </div>
-      </div>
-      </div>
-    </div>
+    </footer>
   </body>
 </html>
