add wide tray list

--- a/index.html
+++ b/index.html
@@ -171,75 +171,75 @@
           <div class="thumbnail">
             <img src="./public/assets/images/thumb03.webp" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>Bhuj : The Pride of India</h3>
+              <h4>Action, Historical, Hindi, English</h4>
+              <p>Running against the clock, IAF squadron leader Vijay Karnik created...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
         </div>
         <div class="thumbnail-container">
           <div class="thumbnail">
-            <img src="./public/assets/images/thumb01.webp" alt="">
+            <img src="./public/assets/images/hanuman.jpg" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>The Legend of Hanuman</h3>
+              <h4>Mythology, Animation, Hotstar Special</h4>
+              <p>Hanuman has realized his limitless powers, and now he must journey alon...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
         </div>
         <div class="thumbnail-container">
           <div class="thumbnail">
-            <img src="./public/assets/images/thumb02.webp" alt="">
+            <img src="./public/assets/images/cod.jpg" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>City of Dreams</h3>
+              <h4>Drama, Hotstar Specials</h4>
+              <p>Ameya Gaikwad has lost everything to his daughter, Poornima. As her...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
         </div>
         <div class="thumbnail-container">
           <div class="thumbnail">
-            <img src="./public/assets/images/thumb03.webp" alt="">
+            <img src="./public/assets/images/hungama2.jpg" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>Hungama 2</h3>
+              <h4>Comedy, Hindi, 2021</h4>
+              <p>The Kapoors, Bajajs and Tiwaris lead picture-perfect lives until a young...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
         </div>
         <div class="thumbnail-container">
           <div class="thumbnail">
-            <img src="./public/assets/images/thumb01.webp" alt="">
+            <img src="./public/assets/images/cb.jpg" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>Collar Bomb</h3>
+              <h4>Crime, Thriller, Hindi, 2021</h4>
+              <p>A celebrated cop is forced to commit crimes before a suicide bomber blows...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
         </div>
         <div class="thumbnail-container">
           <div class="thumbnail">
-            <img src="./public/assets/images/thumb02.webp" alt="">
+            <img src="./public/assets/images/grahan.jpg" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>Grahan</h3>
+              <h4>Drama, Thriller, Hotstar Specials</h4>
+              <p>It's 1984 - a tender love story succumbs to the anti-Sikh ritos. It's 2016 - IPS...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
         </div>
         <div class="thumbnail-container">
           <div class="thumbnail">
-            <img src="./public/assets/images/thumb03.webp" alt="">
+            <img src="./public/assets/images/luca.jpg" alt="">
             <div class="details">
-              <h3>Cruella</h3>
-              <h4>Crime, Comedy, English</h4>
-              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <h3>Luca</h3>
+              <h4>Family, Kids, Comedy, English</h4>
+              <p>The movie is coming-of-age story about one young boy experiencing an...</p>
               <button class="btn">+  ADD TO WATCHLIST</button>
             </div>
           </div>
@@ -279,6 +279,187 @@
         </div>
       </div>
       
+    </div>
+    <div class="show-tray-list">
+      <div class="header-wrapper">
+        <h1>Popular</h1>
+      </div>
+      <div class="show-list">
+          <!-- <button class="scroll-btn-left">&lt;</button>
+          <button class="scroll-btn-right">&gt;</button> -->
+          <div class="thumbnail-container">
+            <div class="thumbnail">
+              <img src="./public/assets/images/cod.jpg" alt="">
+              <div class="details">
+                <h3>City of Dreams</h3>
+                <h4>Drama, Hotstar Specials</h4>
+                <p>Ameya Gaikwad has lost everything to his daughter, Poornima. As her...</p>
+                <button class="btn">+  ADD TO WATCHLIST</button>
+              </div>
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail">
+              <img src="./public/assets/images/hungama2.jpg" alt="">
+              <div class="details">
+                <h3>Hungama 2</h3>
+                <h4>Comedy, Hindi, 2021</h4>
+                <p>The Kapoors, Bajajs and Tiwaris lead picture-perfect lives until a young...</p>
+                <button class="btn">+  ADD TO WATCHLIST</button>
+              </div>
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail">
+              <img src="./public/assets/images/cb.jpg" alt="">
+              <div class="details">
+                <h3>Collar Bomb</h3>
+                <h4>Crime, Thriller, Hindi, 2021</h4>
+                <p>A celebrated cop is forced to commit crimes before a suicide bomber blows...</p>
+                <button class="btn">+  ADD TO WATCHLIST</button>
+              </div>
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail">
+              <img src="./public/assets/images/grahan.jpg" alt="">
+              <div class="details">
+                <h3>Grahan</h3>
+                <h4>Drama, Thriller, Hotstar Specials</h4>
+                <p>It's 1984 - a tender love story succumbs to the anti-Sikh ritos. It's 2016 - IPS...</p>
+                <button class="btn">+  ADD TO WATCHLIST</button>
+              </div>
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail">
+              <img src="./public/assets/images/luca.jpg" alt="">
+              <div class="details">
+                <h3>Luca</h3>
+                <h4>Family, Kids, Comedy, English</h4>
+                <p>The movie is coming-of-age story about one young boy experiencing an...</p>
+                <button class="btn">+  ADD TO WATCHLIST</button>
+              </div>
+            </div>
+          </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb01.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb02.webp" alt="">
+            <div class="details">
+              <h3>The Empire</h3>
+              <h4>Drama, Historical, Hotstar Special</h4>
+              <p>In the midst of scheming courtiers, ministers and a dead king, 14 year old...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb03.webp" alt="">
+            <div class="details">
+              <h3>Bhuj : The Pride of India</h3>
+              <h4>Action, Historical, Hindi, English</h4>
+              <p>Running against the clock, IAF squadron leader Vijay Karnik created...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/hanuman.jpg" alt="">
+            <div class="details">
+              <h3>The Legend of Hanuman</h3>
+              <h4>Mythology, Animation, Hotstar Special</h4>
+              <p>Hanuman has realized his limitless powers, and now he must journey alon...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb01.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb02.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+        <div class="thumbnail-container">
+          <div class="thumbnail">
+            <img src="./public/assets/images/thumb03.webp" alt="">
+            <div class="details">
+              <h3>Cruella</h3>
+              <h4>Crime, Comedy, English</h4>
+              <p>The film is about rebellious early days of cinema's most notorious and...</p>
+              <button class="btn">+  ADD TO WATCHLIST</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+    </div>
+    <div class="show-tray-list">
+      <div class="header-wrapper">
+        <h1>Popular Channels</h1>
+      </div>
+      <div class="show-list wide-list">
+          <!-- <button class="scroll-btn-left">&lt;</button>
+          <button class="scroll-btn-right">&gt;</button> -->
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w1.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w2.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w3.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w4.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w5.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w6.jpg" alt="">
+            </div>
+          </div>
+      </div>
     </div>
     <footer>
       <div class="footer-container">
