--- a/index.html
+++ b/index.html
@@ -459,6 +459,16 @@
               <img src="./public/assets/images/w6.jpg" alt="">
             </div>
           </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w7.jpg" alt="">
+            </div>
+          </div>
+          <div class="thumbnail-container">
+            <div class="thumbnail wide">
+              <img src="./public/assets/images/w8.png" alt="">
+            </div>
+          </div>
       </div>
     </div>
     <footer>
